@@ -12,6 +12,7 @@ Changes in Slurm-GCP 5.0.0
  -- Added data migration workflow example jobs and configuration
  -- oslogin can be disabled to allow other user and authentication methods
  -- Cluster synchronizes to configuration
+ -- Fix placement groups leak on `terraform destroy`
 
 Changes in Slurm-GCP 4.1.0
 ==========================
